@@ -1,3 +1,8 @@
+2003-05-28  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/menus.c (do_menu):
+	fixed warping pointer to first menu item when invoked with the mouse
+
 2003-05-28  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm/ConfigFvwmDefaults:
@@ -11,7 +16,7 @@
 
 2003-05-27  olicha  <olivier.chapuis@free.fr>
 
-	* fvwm/icons.c (CreateIconWindow): 
+	* fvwm/icons.c (CreateIconWindow):
 	(DrawIconWindow):
 	(GetIconBitmap):
 	Fixed loading of application supplied pixmap on 8/24 depth screen
